# document_topic_map

./: .gitignore  DEPLOYMENT_FIX.md  README.md  _headers  asset-manifest.json  conference_map_clean.py  index.html  package-lock.json  package.json  pyproject.toml  run.sh  setup.sh  titles.txt
.github/workflows/: deploy.yml
public/: _headers  index.html
src/: App.css  App.js  index.js
src/components/: AboutModal.css  AboutModal.js  FileUpload.css  FileUpload.js  ProgressBar.css  ProgressBar.js  Visualizations.css  Visualizations.js
src/utils/: clustering.js  dimensionReduction.js  embeddings.js  embeddings_hf_api.js  embeddings_old.js  topicExtraction.js
src/workers/: transformerWorker.js  transformerWorker_old.js
static/css/: main.46fab622.css  main.46fab622.css.map  main.4846adff.css  main.4846adff.css.map  main.add1dad4.css  main.add1dad4.css.map  main.c7532400.css  main.c7532400.css.map  main.ed4ef39f.css  main.ed4ef39f.css.map
static/js/: 129.fc574c30.chunk.js  129.fc574c30.chunk.js.map  778.3e14acd0.chunk.js  778.3e14acd0.chunk.js.map  778.9e4d9f51.chunk.js  778.9e4d9f51.chunk.js.map  917.000c3236.chunk.js  917.000c3236.chunk.js.map  917.00e6690e.chunk.js  917.00e6690e.chunk.js.map  917.136140c7.chunk.js  917.136140c7.chunk.js.map  917.36058e9c.chunk.js  917.36058e9c.chunk.js.map  917.36ee0936.chunk.js  917.36ee0936.chunk.js.map  917.3b0760c2.chunk.js  917.3b0760c2.chunk.js.map  917.ca5acae1.chunk.js  917.ca5acae1.chunk.js.map  917.d4ca5357.chunk.js  917.d4ca5357.chunk.js.map  917.d9986139.chunk.js  917.d9986139.chunk.js.map  main.0a7956cb.js.map  (+12 more)
